--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!-- Header -->
-<div id="header" style="background-image: url({{ 'images/header.jpg' | prepend: site.baseurl }})">
+<div id="header" style="background-image: url({{ 'images/bg.jpg' | prepend: site.baseurl }})">
 
   <!-- Mobile Nav -->
   <a id="mobile-nav" class="toggle">
