--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,6 +11,16 @@
 
   <!-- Inner -->
   <div class="inner">
+    <style>
+      h1 {
+        color: white;
+        text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;  
+    }
+  </style>
     <header>
       <h1>
         <a href="" id="logo">
