--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,8 +19,8 @@
         1px -1px 0 #000,
         -1px 1px 0 #000,
         1px 1px 0 #000;  
-    }
-  </style>
+      }
+    </style>
     <header>
       <h1>
         <a href="" id="logo">
@@ -37,6 +37,16 @@
 
   <!-- Nav -->
   <nav id="nav">
+    <style>
+      ul {
+        color: white;
+        text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;  
+      }
+    </style>
     <ul>
       <li {% if page.url == "/" %}class="active"{% endif %}><a href="{{ '/' | prepend: site.baseurl }}">About</a></li>
       <li {% if page.url == "/publications/" %}class="active"{% endif %}><a href="{{ '/publications/' | prepend: site.baseurl }}">Publications</a></li>
