--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
           <ul class="icons">
             <li><a href="#email" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
             <li><a href="https://www.linkedin.com/in/david-watson-9707a7106/" class="icon fa-linkedin" target="_blank" rel="nofollow"><span class="label">LinkedIn</span></a></li>
-            <li><a href="https://github.com/dswatson" class="icon fa-girhut" target="_blank" rel="nofollow"><span class="label">Github</span></a></li>
+            <li><a href="https://github.com/dswatson" class="icon fa-github" target="_blank" rel="nofollow"><span class="label">Github</span></a></li>
             <li><a href="https://twitter.com/home" class="icon fa-twitter" target="_blank" rel="nofollow"><span class="label">Twitter</span></a></li>
 
           </ul>
