--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <link rel="canonical" href="{{ /page.url | replace:'index.html','' | prepend: site.url | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ '/css/helios.css' | prepend: site.baseurl}}" />
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}" />
-  <!-- <link rel="stylesheet" href="{{ '/css/academicons.min.css' | prepend: site.baseurl }}"/> -->
+  <link rel="stylesheet" href="{{ '/css/academicons.min.css' | prepend: site.baseurl }}"/>
   
 	<link rel="icon" sizes="32x32" href="{{ "/favicon.ico" | prepend: site.baseurl }}" />
 	
