--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
           </header> -->
           <ul class="icons">
             <li><a href="#email" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-            <li><a href="https://scholar.google.com/citations?user=BAHkyk8AAAAJ" class="icon ai ai-google-scholar-square ai-3x" target="_blank" rel="nofollow"><span class="label">GoogleScholar</span></a></li>
+            <li><a href="https://scholar.google.com/citations?user=BAHkyk8AAAAJ" class="icon ai ai-google-scholar" target="_blank" rel="nofollow"><span class="label">GoogleScholar</span></a></li>
             <li><a href="https://github.com/dswatson" class="icon fa-github" target="_blank" rel="nofollow"><span class="label">GitHub</span></a></li>
             <li><a href="https://twitter.com/ds_wats0n" class="icon fa-twitter" target="_blank" rel="nofollow"><span class="label">Twitter</span></a></li>
             <li><a href="https://www.linkedin.com/in/david-watson-9707a7106/" class="icon fa-linkedin" target="_blank" rel="nofollow"><span class="label">LinkedIn</span></a></li>
