--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,7 +50,8 @@
     <ul>
       <li {% if page.url == "/" %}class="active"{% endif %}><a href="{{ '/' | prepend: site.baseurl }}">About</a></li>
       <li {% if page.url == "/publications/" %}class="active"{% endif %}><a href="{{ '/publications/' | prepend: site.baseurl }}">Publications</a></li>
-      <li {% if page.url == "/cv/" %}class="active"{% endif %}><a href="{{ '/cv/' | prepend: site.baseurl }}">CV</a></li>
+      <!-- <li {% if page.url == "/cv/" %}class="active"{% endif %}><a href="{{ '/cv/' | prepend: site.baseurl }}">CV</a></li> --> 
+      <li {% if page.url == "/software/" %}class="active"{% endif %}><a href="{{ '/software/' | prepend: site.baseurl }}">Software</a></li>
     </ul>
   </nav>
 
