--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,8 @@
  ****************/
 
  $bg-color: #2D5566;
- $white: #FFF;
+ /* $white: #FFF;
+ $white: #2D2D2D
 
 /****************
  *    Mixins    *
